Changes by derek